# leet-code-routine

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/150_tasks/: 00_template.py  06_zig_zag_conversion.py  07_longest_substring_wo_repeating_chars.py  11_container_with_most_water.py  121_best_day_to_buy_sell_stock.py  122_best_day_to_buy_sell_stock_2.py  12_integer_to_roman.py  134_gas_station.py  135_candy.py  13_roman_to_integer.py  14_longer_common_prefix.py  151_reverse_words_in_string.py  15_3sum.py  167_two_sum_array_is_sorted.py  169_majority_element.py  189_rotete_array.py  209_minimum_size_subarray_sum.py  238_product_of_array_except_self.py  26_remove_duplicates_from_sorted_array.py  274_h_index.py  27_remove_element.py  28_find_index_of_first_ocurance_in_string.py  30_substring_with_concat_all_words.py  36_valid_sudoku.py  380_insert_delete_get_random.py  392_is_subsequence.py  42_traping_rain_water.py  45_jump_game_2.py  48_rotate_image.py  54_spiral_matrix.py  55_jump_game.py  58_lenght_of_last_word.py  68_text_justification.py  76_min_window_substring.py  80_remove_duplicates_from_sorted_array_2.py  88_merge_sort_array.py  readme.md
