[tool.poetry]
name = "leet-code-routine"
version = "0.1.0"
description = ""
authors = ["Nikolay Nezhevenko <nekey975@yandex.ru>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"

[virtualenvs]
in-project = true

[tool.pytest.ini_options]
python_files = "*.py"

[tool.isort]
line_length = 120
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
multi_line_output = 3
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
